partial front and back

--- a/front/pizzaria/angular.json
+++ b/front/pizzaria/angular.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
-    "analytics": "b3dea3e0-dd8b-4900-b854-ecf270b4f082"
+    "analytics": "5b6e263f-df30-442e-a648-aa9ab61b5000"
   },
   "version": 1,
   "newProjectRoot": "projects",
@@ -34,6 +34,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -102,6 +103,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
